argo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.127.0.0.1.nip.io`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server-server
          port: 80
    - kind: Rule
      match: Host(`argocd.127.0.0.1.nip.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - kind: Rule
#      match: Host(`argocd.127.0.0.1.nip.io`)
#      priority: 10
#      services:
#        - name: argocd-server
#          port: 8080
#    - kind: Rule
#      match: Host(`argocd.127.0.0.1.nip.io`) && Headers(`Content-Type`, `application/grpc`)
#      priority: 11
#      services:
#        - name: argocd-server
#          port: 8080
#          scheme: h2c
#  tls:
#    certResolver: default
##    options: {}
